@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 0.5-hald.rc 681 RMD160 f94d4a6e4ffb3beb84eeeb8e25564fa566ecc493 SHA1 fe413a84ee58cefa923cbc922a1c961fbdb17aa6 SHA256 802f83998c50a3e030d1db2f5a8364e4bb10eebecd464683445d63cf56702161
 MD5 facf81eeca7ebddff5d030acb36de31d files/0.5-hald.rc 681
 RMD160 f94d4a6e4ffb3beb84eeeb8e25564fa566ecc493 files/0.5-hald.rc 681
@@ -116,14 +119,14 @@ EBUILD hal-0.5.7.1-r4.ebuild 6214 RMD160 dbc2befe87613fde41bacd74f087ded5fea10ba
 MD5 848426833518e6fc7e093821e75f25a2 hal-0.5.7.1-r4.ebuild 6214
 RMD160 dbc2befe87613fde41bacd74f087ded5fea10bab hal-0.5.7.1-r4.ebuild 6214
 SHA256 159d5ef840125742c6b1f2880ee9ad50d77a77cb29b42a9b46a0094920835199 hal-0.5.7.1-r4.ebuild 6214
-EBUILD hal-0.5.7.1-r5.ebuild 6320 RMD160 3d3064cee74769d942e35bcaa3739eae3f1afeda SHA1 f6cf190e0634dadd7fce509a7cef03cd784d2351 SHA256 59b9b99ec787446c83096dc35e58e71c1ef75c10da94c6815068c9065d682148
-MD5 fd62b416824142f9f1f175f490da7c8a hal-0.5.7.1-r5.ebuild 6320
-RMD160 3d3064cee74769d942e35bcaa3739eae3f1afeda hal-0.5.7.1-r5.ebuild 6320
-SHA256 59b9b99ec787446c83096dc35e58e71c1ef75c10da94c6815068c9065d682148 hal-0.5.7.1-r5.ebuild 6320
-MISC ChangeLog 20261 RMD160 170dd5afe9d15db94535611c08b9f3dbfaaf170c SHA1 3fa3056517defa47e33b1f7814055497f38deef4 SHA256 b039702e34e0c8c294354845224452c4ba7928f71b6f8df58d13ad6c758f9604
-MD5 12d74596b500935d3a2a1f780247ccd1 ChangeLog 20261
-RMD160 170dd5afe9d15db94535611c08b9f3dbfaaf170c ChangeLog 20261
-SHA256 b039702e34e0c8c294354845224452c4ba7928f71b6f8df58d13ad6c758f9604 ChangeLog 20261
+EBUILD hal-0.5.7.1-r5.ebuild 6429 RMD160 af29b716a4ed674be6829a835340557109ac10f7 SHA1 a9899abcc7debc43bbac587c03f7836fc9868f2b SHA256 83163dce98337ad39dbfc5f11dc978a9f0be43d69dbd13a51926f189352a9fa4
+MD5 f589863c749ffc2084c47f5b66203cc1 hal-0.5.7.1-r5.ebuild 6429
+RMD160 af29b716a4ed674be6829a835340557109ac10f7 hal-0.5.7.1-r5.ebuild 6429
+SHA256 83163dce98337ad39dbfc5f11dc978a9f0be43d69dbd13a51926f189352a9fa4 hal-0.5.7.1-r5.ebuild 6429
+MISC ChangeLog 20374 RMD160 7c3f3af9949eea8d15a6dbc6dbcc1f1805976e51 SHA1 3689986912f2b6c7eb82305b0d477d9c2121a923 SHA256 b8e75d90898e2235c2e91309967a6e71e1acbc46df2371b51d9d87cf1f42bfec
+MD5 16c92faa4e8453e44678c201d8003ba4 ChangeLog 20374
+RMD160 7c3f3af9949eea8d15a6dbc6dbcc1f1805976e51 ChangeLog 20374
+SHA256 b8e75d90898e2235c2e91309967a6e71e1acbc46df2371b51d9d87cf1f42bfec ChangeLog 20374
 MISC metadata.xml 223 RMD160 ca8850c4808c8972fe9995c456578ff23cb4b3fb SHA1 28aa498172fa4c6f437adb79913ae16f4deb0c0c SHA256 49dd14861ed993df9f3509f82bb7f77e524b4b6c0e137677bb9f873d9cd8541d
 MD5 885e3073744523eaf2450514a311758b metadata.xml 223
 RMD160 ca8850c4808c8972fe9995c456578ff23cb4b3fb metadata.xml 223
@@ -140,3 +143,10 @@ SHA256 6fede189bf70fa0a1009bcefea0a23a8941a051256e7fafc16793324db3c61c0 files/di
 MD5 f6986582ab2d32e615cb3dbce02614cd files/digest-hal-0.5.7.1-r5 238
 RMD160 dafbac18b72d6d7d879ccb37200ce33a870bb8a1 files/digest-hal-0.5.7.1-r5 238
 SHA256 6fede189bf70fa0a1009bcefea0a23a8941a051256e7fafc16793324db3c61c0 files/digest-hal-0.5.7.1-r5 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.2 (GNU/Linux)
+
+iD8DBQFF2SeKoeSe8B0zEfwRAkNFAJ9f1knho6dbm51NpEI2YxpFMY1FAACfal3Q
+0eTHPB4aZ+MvU2N6rPYwpDU=
+=FSrW
+-----END PGP SIGNATURE-----
