@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/hal
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.133 2007/02/15 20:15:45 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hal/Attic/ChangeLog,v 1.134 2007/02/19 04:29:06 cardoe Exp $
+
+  19 Feb 2007; <cardoe@gentoo.org> hal-0.5.7.1-r5.ebuild:
+  Add back hal_unmount that was accidently removed
 
   15 Feb 2007; Jeroen Roovers <jer@gentoo.org> hal-0.5.7.1-r5.ebuild:
   Stable for HPPA (bug #166790).
